# EAG_V2_coursework

./: .env  .gitignore  README.md  example2.py  main.py  pyproject.toml  talk2mcp.py  test_macos_paint.py
4_mcp_intro/: README.md  setup_gmail.py  talk2mcp.py
